--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: csharp
 mono: none
 dotnet: 4.6
-solution: solution-name.sln
+solution: GPM_Test.sln
 script:
   - dotnet restore
   - dotnet test
